--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
      <ul>
-        <li class='navli' id='home'>Mockup</li>
+        <li class='navli' id='home'>Main</li>
         <li class='navli' id='first'>1</li>
         <li class='navli' id='second'>2</li>
         <li class='navli' id='third'>3</li>
